samples/_failures_safe/1761274071_d103c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8bab216.c: In function ‘main’:
./samples/SAFE/__tmp_f8bab216.c:149:10: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  149 |     if (!buffer
      |          ^~~~~~
      |          Buffer
./samples/SAFE/__tmp_f8bab216.c:149:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f8bab216.c:149:16: error: expected ‘)’ at end of input
  149 |     if (!buffer
      |        ~       ^
      |                )
./samples/SAFE/__tmp_f8bab216.c:149:5: error: expected declaration or statement at end of input
  149 |     if (!buffer
      |     ^~
